update new file

--- a/NetBeansProjects/Test_client_server/nbproject/project.properties
+++ b/NetBeansProjects/Test_client_server/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Test_client_server_local
-main.class=test_client_server.Test_client_server
+main.class=cau2.Server
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
