--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /NetBeansProjects/Test_client_server/build/
 /NetBeansProjects/DapAn/build/
 /NetBeansProjects/DapAn/nbproject/private/
+/Dap_an/build/
+/Dap_an/nbproject/private/
