add new solution

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 /cau13/dist/
 /cau14/nbproject/private/
 /cau14/build/
+/cau15/nbproject/private/
+/cau9/nbproject/private/
+/cau10/nbproject/private/
+/cau9/build/
+/cau10/build/
