update new state

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@
 /cau10/nbproject/private/
 /cau9/build/
 /cau10/build/
+/cau04/nbproject/private/
+/Test/nbproject/private/
+/Test/build/
+/cau04/build/
