update new state

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@
 /Test/nbproject/private/
 /Test/build/
 /cau04/build/
+/cau04/dist/
+/cau4_TCP/nbproject/private/
+/cau4_TCP/build/
+/cau4_TCP/dist/
+/cau4_v2/nbproject/private/
+/cau4_v2/build/
+/cau4_v2/dist/
+/cau05_UDP_String/nbproject/private/
+/cau05_UDP_String/build/
+/cau5_v2/nbproject/private/
