--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,15 @@
 /cau05_UDP_String/build/
 /cau5_v2/nbproject/private/
 /cau5_v2/build/
+/cau06_UDP_2th_max_val/nbproject/private/
+/cau06_UDP_2th_max_val/build/
+/cau6_v2/nbproject/private/
+/cau6_v2/build/
+/cau7_UDP_Object/nbproject/private/
+/cau08_UDP_DataType/nbproject/private/
+/cau11_TCP_data_stream/nbproject/private/
+/cau12_TCP_Char_stream/nbproject/private/
+/cau11_TCP_data_stream/build/
+/cau12_v2/nbproject/private/
+/cau12_v2/build/
+/cau11_v2/nbproject/private/
