--- a/cau11_TCP_data_stream/nbproject/project.properties
+++ b/cau11_TCP_data_stream/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/cau04_TCP_Object_stream.jar
+dist.jar=${dist.dir}/cau11_TCP_data_stream.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/cau04_TCP_Object_stream
+dist.jlink.output=${dist.jlink.dir}/cau11_TCP_data_stream
 excludes=
 includes=**
 jar.compress=false
@@ -48,8 +48,7 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -71,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=cau04_TCP_Object_stream
-main.class=cau04.Cau04
+jlink.launcher.name=cau11_TCP_data_stream
+main.class=cau11_tcp_data_stream.Cau11_TCP_data_stream
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
