--- a/cau6_v2/build.xml
+++ b/cau6_v2/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="cau04_TCP_Object_stream" default="default" basedir=".">
-    <description>Builds, tests, and runs the project cau04_TCP_Object_stream.</description>
+<project name="cau6_v2" default="default" basedir=".">
+    <description>Builds, tests, and runs the project cau6_v2.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="cau04_TCP_Object_stream-impl.jar">
+        <target name="run" depends="cau6_v2-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
